trials in navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,5 @@
-<div class="container">
-  <app-navbar *ngIf="showNavbar && !isMobile"></app-navbar>
-</div>
-
-<app-mobile-navbar *ngIf="showNavbar && isMobile"></app-mobile-navbar>
-
-<!-- new code -->
-<!-- <app-mobile-sidemenu [ngClass]="{ 'show': sideMenu.isMenuOpen }" *ngIf="showNavbar && isMobile"></app-mobile-sidemenu> -->
-<!-- <button (click)="sideMenu.toggleMenu()">Toggle Side Menu</button> -->
-<!-- end of new code -->
-
-
-
-<div class="window home" [ngClass]="{'mobile': isMobile}">
-  <router-outlet name="primary"></router-outlet>
-</div>
-
-<div class="window about" [ngClass]="{'mobile': isMobile}">
-  <router-outlet name="primary"></router-outlet>
-</div>
-
-<div class="window mission" [ngClass]="{'mobile': isMobile}">
-  <router-outlet name="primary"></router-outlet>
-</div>
-
-<div class="window portfolio" [ngClass]="{'mobile': isMobile}">
-  <router-outlet name="primary"></router-outlet>
-</div>
-
-<div class="window contact" [ngClass]="{'mobile': isMobile}">
-  <router-outlet name="primary"></router-outlet>
+<div class="window" [ngClass]="{'mobile': isMobile}">
+    <app-navbar *ngIf="showNavbar && !isMobile"></app-navbar>
+    <app-mobile-navbar *ngIf="showNavbar && isMobile"></app-mobile-navbar>
+    <router-outlet name="primary"></router-outlet>
 </div>
