--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,16 @@
 <!-- Home Page -->
 <div class="home" [ngClass]="{'mobile':isMobile}">
+
+
     <div class="first-bg">
         <div class="poster-container">
+            
             <div class="small-spacer-div" *ngIf="!isMobile"></div>
             <app-main-poster></app-main-poster>
-            <div class="spacer-div"></div>
+            <div class="spacer-div" *ngIf="!isMobile"></div>
         </div>
 
-        <div class="container">
+        <div class="container about-com">
 
             <span class="breadcrumb" [@fadeInFromTop]>ABOUT COMPANY</span>
             <h1 [@enterFromLeft0]>We are the magic behind the company’s best days. </h1>
