--- a/src/app/shared/mobile-navbar/mobile-navbar.component.html
+++ b/src/app/shared/mobile-navbar/mobile-navbar.component.html
@@ -1,7 +1,6 @@
 <!-- Mobile Navigation menu section opens for mobile exclusively from the right side  -->
-<nav class="mobile-nav row" [ngClass]="{'contact-navbar': isContact , 'poster-navbar': isHome}">
+<nav class="mobile-nav row " [ngClass]="{'contact-navbar': isContact , 'poster-navbar': isHome}">
     <div class="col-3">
-
     </div>
     <div class="logo col-6">
         <img class="logo-img" *ngIf="isHome !== true && isContact !== true" src="assets/logo.svg" alt="logo"
@@ -19,8 +18,8 @@
 </nav>
 
 
-<div class="mobile-side-menu" *ngIf="milaya.sideMenuOpen" [ngClass]="{'show-mobile-menu': milaya.sideMenuOpen}" [@slideInFromRight]>
-
+<div class="mobile-side-menu" *ngIf="milaya.sideMenuOpen" [ngClass]="{'show-mobile-menu': milaya.sideMenuOpen}"
+    [@slideInFromRight] fixedInViewport mode="over">
     <div class="head row">
         <div class="col-6">
             <img class="logo-img" src="assets/logo-black.svg" alt="logo" [routerLink]="'/home'" />
@@ -40,16 +39,12 @@
         <li> <a routerLink="/portfolio" routerLinkActive="active" (click)="toggleMobileMenu()">Portfolio</a></li>
         <li> <a routerLink="/contact" routerLinkActive="active" (click)="toggleMobileMenu()">Contact</a></li>
     </ul>
-
     <div class="social-media-wrapper">
         <img src="../../../assets/social-media-insta.svg" alt="insta">
         <img src="../../../assets/social-media-x.svg" alt="x">
         <img src="../../../assets/social-media-fb.svg" alt="fb">
     </div>
-
-
     <div class="divider"></div>
-
     <p class="footer-copy-rights">
         Copyright © 2023 Milaya Capital All Rights Reserved
     </p>
