--- a/src/variables.scss
+++ b/src/variables.scss
@@ -201,6 +201,7 @@ $smoke-white: #f3f3f3;
 $error-color: #f6303f;
 $error-bg: #fff0f1;
 $success-color: #390;
+$shadow : #343a40;
 
 /*****************************/
 /* COLORS */
