--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -17,14 +17,14 @@
             transform: translate(-50%, -50%);
             width: 100%;
             height: 80%;
-            background-color: $dark-grey;
+            background-color: $dark-grey !important;
             border-radius: 30px
         }
 
         @media screen and (max-width: 1500px) {
             height: 130%;
         }
-        
+
     }
 
     .content-container {
@@ -32,10 +32,20 @@
     }
 
 
-    .contact-form-wrapper{
+    .contact-form-wrapper {
         margin: 30px;
     }
 }
+
 .map-container {
     padding: 0px;
+}
+
+
+
+.contact.mobile {
+    .first-bg {
+        border-radius: 75px;
+    }
+
 }
