--- a/src/app/shared/contact-form/contact-form.component.scss
+++ b/src/app/shared/contact-form/contact-form.component.scss
@@ -10,7 +10,7 @@
     display: flex;
     padding: 0px;
 
-    .text-danger{
+    .text-danger {
         font-size: $p-desc-port;
     }
 
@@ -107,18 +107,20 @@
             line-height: 17px;
         }
 
-       
+
 
     }
 
     .form-floating {
+
         input,
         textarea {
             border-style: none;
             border-bottom: 1px solid $mid-grey ;
             border-radius: 0;
         }
-        textarea{
+
+        textarea {
             height: 100px;
         }
 
@@ -137,6 +139,7 @@
             width: 90%;
             height: 55px;
         }
+
         cursor: pointer;
         margin: auto 0px auto;
         width: 100%;
@@ -145,70 +148,71 @@
 }
 
 
-.contact-form.mobile{
+.contact-form.mobile {
     display: block;
-    .send-message-section{
-        h2{
+
+    .send-message-section {
+        margin-top: -20% !important;
+        border-radius: 20px 0px 0px 0px;
+        h2 {
             font-size: $s-font-2;
             font-weight: 600;
             line-height: 23px;
         }
-        p{
+
+        p {
             font-size: $p-portfolio;
             font-weight: 600;
             line-height: 19px;
         }
     }
 
-    .contact-form{
-        .d-flex{
+    .contact-form {
+        .d-flex {
             display: block !important;
         }
 
-        .contact-btn-col{
+        .contact-btn-col {
             text-align: center;
             margin-right: 0px;
-            button{
+
+            button {
                 height: 60px;
                 margin-top: 20px;
                 width: auto;
             }
         }
-      
     }
-}
 
-.contact-form.mobile{
-    .get-in-touch{
+    .get-in-touch {
         border-radius: 0px 0px 20px 20px;
-        h1{
+
+        h1 {
             font-size: $s-font-2 !important;
             font-weight: 600;
             line-height: 23px !important;
         }
-        p.description-p{
+
+        p.description-p {
             font-size: $p-font;
             font-weight: 600;
             line-height: 20px;
         }
-        p.description-p2{
+
+        p.description-p2 {
             font-size: $p-portfolio;
             font-weight: 500;
             line-height: 19px;
         }
 
-        .address-section{
-            .content{
-                h5{
+        .address-section {
+            .content {
+                h5 {
                     font-size: $p-portfolio;
                     font-weight: 600;
                     line-height: 19px;
                 }
             }
         }
-    }
-
-    .send-message-section{
-        border-radius: initial;
     }
 }
