--- a/src/app/shared/main-poster/main-poster.component.scss
+++ b/src/app/shared/main-poster/main-poster.component.scss
@@ -114,6 +114,18 @@
         font-weight: 600;
     }
 
+    .about-btn {
+        width: 148px !important;
+        border-radius: 47px;
+        background-color: $white;
+        color: $brand;
+        padding: 15px;
+        font-size: $s-font;
+        font-weight: 600;
+        margin-bottom: 30px;
+        line-height: 19px;
+    }
+
     .layer {
         border-radius: 0px;
     }
@@ -123,3 +135,129 @@
 .main-poster.mobile-poster::after {
     border-radius: 0px ;
 }
+
+
+
+
+// .main-poster::after {
+//     // content: "";
+//     // background-color: $bg-layer;
+//     // position: absolute;
+//     // top: 0;
+//     // left: 0;
+//     // width: 100%;
+//     // height: 100%;
+//     // z-index: -1;
+//     // border-radius: 40px;
+// }
+
+// .main-poster {
+//     // border-radius: 40px;
+//     // padding: 40px;
+//     // text-align: center;
+//     // background-image: url('../../../assets/main-poster.svg');
+//     // background-color: $bg-layer;
+//     // background-size: cover;
+//     // background-repeat: no-repeat;
+//     // position: relative;
+//     // z-index: 0;
+
+
+//     @media screen and (max-width: 1000px) {
+//         padding: 20px;
+//     }
+
+//     .main-desc {
+//         font-weight: 700;
+//         color: $white;
+//         font-size: $l-font;
+//         line-height: 58px;
+//         margin: 90px 120px 25px 120px;
+//     }
+
+
+//     .highlighter-text {
+//         position: relative;
+//         display: inline-block;
+//         color: $white;
+//         z-index: 0;
+//     }
+
+//     .highlighter-text::before {
+//         content: '';
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         width: 100%;
+//         height: 100%;
+//         background-color: $brand;
+//         color: $white;
+//         z-index: -1;
+//         mix-blend-mode: multiply;
+//         transform: rotate(-2deg);
+//     }
+
+//     .desc {
+//         color: $white-grey;
+//         font-size: $s-font;
+//         margin: 35px 145px 60px 145px;
+//         line-height: 22px;
+//         font-weight: 600;
+//     }
+
+
+//     .layer {
+//         background-color: $bg-layer;
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         width: 100%;
+//         height: 100%;
+//         z-index: -2;
+//         border-radius: 20px;
+//     }
+
+//     .about-btn {
+//         width: 148px !important;
+//         border-radius: 47px;
+//         background-color: $white;
+//         color: $brand;
+//         padding: 15px;
+//         font-size: $s-font;
+//         font-weight: 600;
+//         margin-bottom: 30px;
+//         line-height: 19px;
+//     }
+
+
+// }
+
+
+// .mobile-poster.main-poster {
+//     .main-desc {
+//         font-weight: 700;
+//         font-size: 20px;
+//         line-height: 30px;
+//         margin: 100px 0px 0px 0px;
+//     }
+
+//     .desc {
+//         color: $white-grey;
+//         font-size: $p-desc-port;
+//         margin: 30px 0px 30px 0px;
+//         line-height: 16px;
+//         font-weight: 600;
+//     }
+
+//     .layer {
+//         border-radius: 0px;
+//     }
+
+//     .about-btn{
+//         margin-bottom: 0px;
+//     }
+// }
+
+// .main-poster.mobile-poster {
+//    padding: 0px ;
+// }
