--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,18 @@
 // @import 'variables.scss';
 @import 'variables';
 
-
 body {
     font-family: 'Montserrat', sans-serif;
 }
 
 * {
     font-family: 'Montserrat', sans-serif;
+}
+
+html,
+body {
+    height: 100%;
+    margin: 0;
 }
 
 // Override the default breadcrumb font size
@@ -215,7 +220,7 @@ app-footer::before {
     top: -50%;
     left: 0;
     width: 100%;
-    height: 200%;
+    height: 150%;
     background: url(../src/assets/footer-bg.png) center / cover repeat-y;
     z-index: -1;
     opacity: 0.9;
@@ -298,10 +303,6 @@ app-footer::before {
 }
 
 //////////////////////////////////////////////////////////////////////
-/// 
-/// 
-/// 
-
 
 .what-we-do-slider.mobile {
     .owl-carousel {
@@ -356,16 +357,18 @@ app-footer::before {
 
 .toast-container {
     width: 100% !important;
+
     .toast-success {
-        background-color: #333;
-        color: #fff;
+        background-color: $grey;
+        color: $white;
         margin-right: auto;
         margin-left: auto;
         text-align: center;
     }
+
     .toast-error {
-        background-color: red;
-        color: #fff;
+        background-color: $error-color;
+        color: $white;
         margin-right: auto;
         margin-left: auto;
         text-align: center;
