--- a/src/app/shared/main-poster/main-poster.component.scss
+++ b/src/app/shared/main-poster/main-poster.component.scss
@@ -34,6 +34,7 @@
         font-size: $l-font;
         line-height: 58px;
         margin: 90px 120px 25px 120px;
+        position: relative;
     }
 
 
