--- a/src/app/shared/mobile-navbar/mobile-navbar.component.scss
+++ b/src/app/shared/mobile-navbar/mobile-navbar.component.scss
@@ -27,8 +27,8 @@
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 52%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: url('../../../assets/MILAYA-bg.svg') 80% /contain no-repeat, url('../../../assets/squares-mobile.svg') center center / cover;
     background-color: $mid-grey;
     z-index: 99999999 !important;
