--- a/src/app/pages/portfolio-details/portfolio-details.component.html
+++ b/src/app/pages/portfolio-details/portfolio-details.component.html
@@ -1,13 +1,15 @@
 <!-- Portfolio Details Page Opens when user clicks on any portfolio card tile to go to details  -->
-<app-overview [pageTitle]="'Portfolio Details'"  [pageOverviewText]="'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Utex   ex ea commodo consequat.'"></app-overview>
+<app-overview [pageTitle]="'Portfolio Details'"
+    [pageOverviewText]="'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Utex   ex ea commodo consequat.'"></app-overview>
 <div class="spacer-div"></div>
 
 
 <app-portfolio-detail-card></app-portfolio-detail-card>
 <div class="spacer-div"></div>
 
-<app-portfolio-page-slider></app-portfolio-page-slider>
+<!-- <app-portfolio-page-slider></app-portfolio-page-slider> -->
+<app-portfolio-slider></app-portfolio-slider>
 <div class="spacer-div" *ngIf="!isMobile"></div>
 
 
-<app-footer>    </app-footer>
+<app-footer> </app-footer>
