--- a/src/app/shared/portfolio-slider/portfolio-slider.component.scss
+++ b/src/app/shared/portfolio-slider/portfolio-slider.component.scss
@@ -24,13 +24,15 @@
         margin: 20px;
         border: 1px $mid-grey solid;
         border-radius: 20px;
-        // background: linear-gradient(150.12deg, rgba(217, 217, 217, 0.9) 3.9%, rgba(217, 217, 217, 0.1) 91.59%);
         background: $portfolio-bg-card;
         box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2), -5px -5px 10px rgba(0, 0, 0, 0.2);
 
         .portfolio-card-image {
             width: 100%;
             padding: 10px;
+            img{
+                width: 100%;
+            }
         }
 
         .portfolio-card-title {
@@ -62,4 +64,19 @@
     background: url(../../../assets/gallerytxt.svg) right bottom/contain no-repeat;
     z-index: -1;
     opacity: 0.9;
+}
+
+
+.slick-slider {
+    // width: 88%;
+    // margin: auto;
+    // background: rgb(14, 13, 13);
+  }
+  
+.slick-prev, 
+.slick-next {
+    height: 45px;
+    width: 40px;
+    background: grey !important;
+    z-index: 100;
 }
