options for side menu and some fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="window" [ngClass]="{'mobile': isMobile}">
-    <app-navbar *ngIf="showNavbar && !isMobile"></app-navbar>
+    <div class="container">
+        <app-navbar *ngIf="showNavbar && !isMobile"></app-navbar>
+    </div>
     <app-mobile-navbar *ngIf="showNavbar && isMobile"></app-mobile-navbar>
     <router-outlet name="primary"></router-outlet>
 </div>
