--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -31,6 +31,8 @@
         <app-portfolio-vertical-card class="item" [imageWay]="'top'"  [@fadeInFromTop2] ></app-portfolio-vertical-card>
         <app-portfolio-vertical-card class="item" [imageWay]="'top'"  [@fadeInFromTop1] ></app-portfolio-vertical-card>
         <app-portfolio-vertical-card class="item" [imageWay]="'top'"  [@fadeInFromTop3] ></app-portfolio-vertical-card>
+        <app-portfolio-vertical-card class="item" [imageWay]="'top'"  [@fadeInFromTop3] ></app-portfolio-vertical-card>
+        <app-portfolio-vertical-card class="item" [imageWay]="'top'"  [@fadeInFromTop3] ></app-portfolio-vertical-card>
     </div>
 
 </div>
