--- a/src/app/shared/counter-card/counter-card.component.scss
+++ b/src/app/shared/counter-card/counter-card.component.scss
@@ -29,10 +29,12 @@
         font-weight: 600;
         line-height: 15px;
         font-size: $p-portfolio;
+        margin: 10px;
     }
     .col-counter-desc{
         font-size: $sm-f;
-        font-weight: 500;
+        font-weight: 600;
         line-height: 14px;
+        margin: 0px;
     }
 }
