--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -158,6 +158,9 @@
             width: 15%;
         }
     }
+    .get-in-touch,.quick-links {
+        padding: 10px;
+    }
 }
 p.footer-copy-rights.mobile{
     text-align: center;
