--- a/src/app/shared/mobile-navbar/mobile-navbar.component.html
+++ b/src/app/shared/mobile-navbar/mobile-navbar.component.html
@@ -39,14 +39,17 @@
         <li> <a routerLink="/portfolio" routerLinkActive="active" (click)="toggleMobileMenu()">Portfolio</a></li>
         <li> <a routerLink="/contact" routerLinkActive="active" (click)="toggleMobileMenu()">Contact</a></li>
     </ul>
-    <div class="social-media-wrapper">
-        <img src="../../../assets/social-media-insta.svg" alt="insta">
-        <img src="../../../assets/social-media-x.svg" alt="x">
-        <img src="../../../assets/social-media-fb.svg" alt="fb">
-    </div>
-    <div class="divider"></div>
-    <p class="footer-copy-rights">
-        Copyright © 2023 Milaya Capital All Rights Reserved
-    </p>
 
+    <div class="side-menu-footer">
+        <div class="social-media-wrapper">
+            <img src="../../../assets/social-media-insta.svg" alt="insta">
+            <img src="../../../assets/social-media-x.svg" alt="x">
+            <img src="../../../assets/social-media-fb.svg" alt="fb">
+        </div>
+        <!-- <div class="divider"></div> -->
+        <img class="side-menu-footer-img" src="../../../assets/footer-line.svg" alt="footerline">
+        <p class="footer-copy-rights">
+            Copyright © 2023 Milaya Capital All Rights Reserved
+        </p>
+    </div>
 </div>
