--- a/src/variables.scss
+++ b/src/variables.scss
@@ -183,6 +183,8 @@ $contact-det-font: #35353580;
 $desciption-color:rgba(255, 255, 255, 0.50);
 $map-icon:#868210;
 $portfolio-bg-card:#eeeeee;
+$portfolio-p: #FFFFFF80;
+
 //end milaya
 
 $text: #54565a;
