--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -1,9 +1,7 @@
 @import '../../../variables.scss';
 
 .about {
-    .counter-border {
-        border-right: 0.5px solid #D9D9D9;
-    }
+   
 
     .divider {
         border-top: 0.5px solid #ccc;
@@ -30,6 +28,16 @@
             flex: 1;
         }
     }
+
+    .counter-cards {
+        display: flex ;
+        .c-card{
+            flex:1;
+        }
+        .counter-border {
+            border-right: 0.5px solid #D9D9D9 !important;
+        }
+    }
 }
 
 .about::before {
@@ -39,9 +47,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(../../../assets/lines.svg) center / cover;
+    background: linear-gradient(to top, rgba(255, 255, 255, 0) 70%, rgba(255, 255, 255, 1) 100%), url(../../../assets/lines.svg) center / cover;
     z-index: -1;
-    opacity: 0.2;
 }
 
 .about.mobile {
@@ -53,6 +60,10 @@
             width: 100%;
             margin: 10px 10px 20px 0px;
         }
+    }
+
+    .counter-border {
+        border-right: none !important;
     }
 
 }
