--- a/src/app/pages/clients/clients.component.html
+++ b/src/app/pages/clients/clients.component.html
@@ -5,37 +5,49 @@
 
     <div class="clients-logos"  [@enterFromLeft]="animationStates.enterFromLeft" >
         <div class="logo-img">
-            <img alt="logo1" src="../../../assets/1.svg" />
-        </div>
-        <div class="logo-img">
-            <img alt="logo1" src="../../../assets/2.svg" />
-        </div>
-        <div class="logo-img">
-            <img alt="logo1" src="../../../assets/3.svg" />
-        </div>
-
-        <div class="logo-img">
-            <img alt="logo1" src="../../../assets/5.svg" />
-        </div>
-        <div class="logo-img">
             <img alt="logo1" src="../../../assets/6.svg" />
-        </div>
-
-    </div>
-    <div class="clients-logos"  [@enterFromRight]="animationStates.enterFromRight" >
-
-        <div class="logo-img">
-            <img alt="logo1" src="../../../assets/4.svg" />
         </div>
         <div class="logo-img">
             <img alt="logo1" src="../../../assets/7.svg" />
         </div>
         <div class="logo-img">
+            <img alt="logo1" src="../../../assets/9.svg" />
+        </div>
+        <div class="logo-img">
             <img alt="logo1" src="../../../assets/8.svg" />
         </div>
+        
+        <div class="logo-img">
+            <img alt="logo1" src="../../../assets/2.svg" />
+        </div>
+      
 
+
+
+    </div>
+    <div class="clients-logos"  [@enterFromRight]="animationStates.enterFromRight" >
+        <div class="logo-img">
+            <img alt="logo1" src="../../../assets/1.svg" />
+        </div>
+        <div class="logo-img">
+            <img alt="logo1" src="../../../assets/2.svg" />
+        </div>
+      
+        <div class="logo-img">
+            <img alt="logo1" src="../../../assets/4.svg" />
+        </div>
+        
+        <div class="logo-img">
+            <img alt="logo1" src="../../../assets/5.svg" />
+        </div>
         <div class="logo-img">
             <img alt="logo1" src="../../../assets/9.svg" />
         </div>
+<!-- 
+
+        <div class="logo-img">
+            <img alt="logo1" src="../../../assets/3.svg" />
+        </div> -->
+
     </div>
 
