--- a/src/app/pages/clients/clients.component.scss
+++ b/src/app/pages/clients/clients.component.scss
@@ -1,11 +1,14 @@
 @import '../../../variables';
+
 .clients {
     text-align: center;
+    margin-bottom: 40px;
 
     h1 {
         width: 49%;
         margin-right: auto;
         margin-left: auto;
+        margin-bottom: 40px;
     }
 
     .breadcrumb {
@@ -42,15 +45,16 @@
     }
 }
 
-.clients.mobile{
-    h1.black{
+.clients.mobile {
+    h1.black {
         font-weight: 700;
         font-size: $h3-font;
         line-height: 27px;
     }
+
     .clients-logos {
         .logo-img {
-            img{
+            img {
                 width: 80%;
             }
         }
