--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -16,7 +16,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             width: 100%;
-            height: 80%;
+            height: 112%;
             background-color: $dark-grey !important;
             border-radius: 30px
         }
@@ -39,6 +39,7 @@
 
 .map-container {
     padding: 0px;
+    
 }
 
 
@@ -46,6 +47,7 @@
 .contact.mobile {
     .first-bg {
         border-radius: 75px;
+        height: 80% !important;
     }
 
 }
