--- a/src/app/pages/mission/mission.component.scss
+++ b/src/app/pages/mission/mission.component.scss
@@ -12,5 +12,10 @@
     height: 120%;
     background: url(../../../assets/world.svg) center / contain repeat-y; 
     z-index: -1; 
-    opacity: 1; 
+  }
+
+  .mission.mobile::before{
+    top: -6% ;
+    height: 39% ;
+    z-index: -1;
   }
