--- a/src/app/pages/portfolio/portfolio.component.scss
+++ b/src/app/pages/portfolio/portfolio.component.scss
@@ -9,10 +9,13 @@
     height: 100%;
     background: url(../../../assets/porfolio-bg.svg) center / cover;
     z-index: -1;
-    opacity: 0.4;
 }
 
 app-portfolio-card {
+    cursor: pointer;
+}
+
+app-portfolio-vertical-card {
     cursor: pointer;
 }
 
@@ -27,12 +30,16 @@ app-portfolio-card {
 .portfolio-vertical-divs {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between; 
-  }
-  
-  .item {
-    flex-basis: calc(33.33% - 10px); 
-    margin-bottom: 10px; 
+    justify-content: space-between;
+}
+
+.item {
+    flex-basis: calc(33.33% - 10px);
+    margin-bottom: 10px;
     box-sizing: border-box;
     padding: 0px 50px 50px 0px;
-  }
+}
+
+.portfolio.mobile::before {
+    background: url(../../../assets/porfolio-bg.svg)  top/contain no-repeat;
+}
