--- a/src/app/shared/overview/overview.component.scss
+++ b/src/app/shared/overview/overview.component.scss
@@ -22,11 +22,11 @@
         }
     }
 
-    p.overview-p{
+    p.overview-p {
         color: $overview-color;
         font-size: $s-font ;
-        line-height: 21px ;
-        font-weight: 600 ;
+        line-height: 21px;
+        font-weight: 600;
     }
 }
 
@@ -34,37 +34,56 @@
     width: 100% !important;
     margin-right: auto;
     text-align: left;
-    h1{
+
+    h1 {
         color: $white;
         font-size: $l-font;
         font-weight: 700;
         display: inline !important;
     }
+
     text-align: left;
-    p.overview-p{
+
+    p.overview-p {
         color: $overview-color-contact;
     }
+
     .rect {
         color: $white;
     }
 }
 
-.h-overview.mobile{
-    h1.black{
+.h-overview.mobile {
+    h1.black {
         margin-top: 20px;
         font-size: $h2-font !important;
         font-weight: 700;
         line-height: 29px;
     }
 }
-.overview-p.mobile{
+
+.overview-p.mobile {
     font-size: $p-font-sm !important;
     font-weight: 600;
     line-height: 18px;
     text-align: center;
 }
-.overview{
-    .mobile{
+
+.overview {
+    .mobile {
         margin-top: 20px;
+        .tit-div {
+            img {
+                max-width: 30px;
+                vertical-align: text-top;
+                margin-right: 10px;
+                margin-top: 6px;
+            }
+        }
+    }
+}
+.overview.light{
+    .mobile{
+        text-align: center;
     }
 }
