--- a/src/app/shared/we-are-home/we-are-home.component.html
+++ b/src/app/shared/we-are-home/we-are-home.component.html
@@ -6,9 +6,14 @@
             <i class="bi bi-arrow-up-right" [@fadeInFromTop]></i>
         </span>
         <div class="three-rings">
-            <img [@enterFromBottomLeftToTopRight3] src="../../../assets/inner-circle.svg" alt="inner" />
+            <!-- <img [@enterFromBottomLeftToTopRight1] src="../../../assets/inner-circle.svg" alt="inner" />
             <img [@enterFromBottomLeftToTopRight2] src="../../../assets/inner-circle-border-1.svg" alt="inner2" />
-            <img [@enterFromBottomLeftToTopRight1] src="../../../assets/inner-circle-border-2.png" alt="inner2" />
+            <img [@enterFromBottomLeftToTopRight3] src="../../../assets/inner-circle-border-2.png" alt="inner2" /> -->
+
+            <img class="moving-ring1" src="../../../assets/inner-circle.svg" alt="inner" />
+            <img class="moving-ring2"  src="../../../assets/inner-circle-border-1.svg" alt="inner2" />
+            <img class="moving-ring3"src="../../../assets/inner-circle-border-2.png" alt="inner2" />
+
         </div>
         <p class="bold" [@fadeInFromBottom]>At Milaya Capital, we are proud to operate successful businesses in three different countries:
         </p>
