--- a/src/app/shared/what-we-do/what-we-do.component.scss
+++ b/src/app/shared/what-we-do/what-we-do.component.scss
@@ -8,10 +8,14 @@
 
         &:not(:last-child) {
             margin-right: 40px; 
+
+            @media screen and (max-width: 800px) {
+                margin-right: 10px; 
+            }
         }
         
         background: linear-gradient(90deg, #565656 0%, #4f4f4f 35%, #343434 100%);
-        border: 1px solid white;
+        border: 1px solid $white;
     }
 
 }
@@ -19,12 +23,4 @@
 .what-we-do-slider.mobile{
     display: block;
     
-    app-what-we-do-card {
-        
-        // flex: none;
-        // background: none;
-        // border: 1px solid;
-        // border: none !important;
-        // border-image-source: linear-gradient(180deg, #D9D9D9 0%, rgba(0, 0, 0, 0) 100%) !important;
-    }
 }
