--- a/src/app/shared/heights-slider/heights-slider.component.scss
+++ b/src/app/shared/heights-slider/heights-slider.component.scss
@@ -55,6 +55,7 @@
             position: relative;
             padding: 0px 10px 10px 10px;
             min-height: 290px;
+            background:$light-grey;
 
             .read-more {
                 cursor: pointer;
