--- a/src/app/shared/main-poster/main-poster.component.html
+++ b/src/app/shared/main-poster/main-poster.component.html
@@ -17,7 +17,7 @@
             all aspects of today’s business requirements.
         </p>
 
-        <button type="button" class="btn btn-primary about-btn" [@fadeInFromBottomTy20]>About Us <i
+        <button type="button" class="btn btn-primary about-btn" [@fadeInFromBottomTy20]  [routerLink]="'/about'">About Us <i
                 class="bi bi-box-arrow-in-right"></i>
         </button>
     </div>
